fix span spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -288,20 +288,20 @@ img {
 }
 
 .skills_html {
-  width: 95%;
+  width: 100%;
 }
 .skills_css {
-  width: 85%;
+  width: 100%;
 }
 .skills_js {
-  width: 65%;
+  width: 100%;
 }
 .skills_bootstrap {
-  width: 85%;
+  width: 100%;
 }
 
 .skills_jquery {
-  width: 85%;
+  width: 100%;
 }
 .skills_img {
   border-radius: 0.5rem;
